--- a/static/index.html
+++ b/static/index.html
@@ -6,10 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <link rel="icon" href="favicon.ico">
-    <title>test</title>
-    <script defer="defer" src="/static/js/chunk-vendors.65ddb0b8.js" type="text/javascript"></script>
-    <script defer="defer" src="/static/js/app.6bb10412.js" type="text/javascript"></script>
-    <link href="/static/css/app.d6ede999.css" rel="stylesheet">
+    <title>Система бронювання тенісних кортів</title>
+    <script defer="defer" src="js/chunk-vendors.7e659671.js"></script>
+    <script defer="defer" src="js/app.fa9b0298.js"></script>
+    <link href="css/app.9f45c016.css" rel="stylesheet">
 </head>
 
 <body><noscript><strong>We're sorry but test doesn't work properly without JavaScript enabled. Please enable it to
